discussion/kv_engine/184678/184678_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Enable history scan for CDC backfill

Replace the todo markers with code that now utilises the magma history
API.

Add new tests that validate multiple versions can be stored and
returned.

Change-Id: Ica9ea1b52c51f125c9e8839a0fca412834fc25f7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-17 16:24:54.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-17 16:25:13.000000000
Message: 
Patch Set 8: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332908/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-17 17:03:55.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/856/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1819:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1823:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1827:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2886:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:37:9: error: unknown type name "Mode" [clang-diagnostic-error]
        Mode mode) {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:39:17: error: no member named "Initialize" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return itr->Initialize(startSeqno, endSeqno, mode);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:460:12: error: no member named "SetHistoryRetentionSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetHistoryRetentionSize(historyBytes);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:466:12: error: no member named "SetHistoryRetentionTime" in "magma::Magma" [clang-diagnostic-error]
    magma->SetHistoryRetentionTime(historySeconds);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:538:19: error: no member named "GetOldestHistorySeqno" in "magma::Magma" [clang-diagnostic-error]
    return magma->GetOldestHistorySeqno(kvid);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:544:19: error: no member named "GetOldestHistorySeqno" in "magma::Magma" [clang-diagnostic-error]
    return magma->GetOldestHistorySeqno(snapshot);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/856/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1819:49:
error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/856/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1035/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(774): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1035/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/827/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/827/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/877/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Missing stat:  ep_magma_value_separation_size from stat group 
[2023-01-17T17:00:57.550Z] Missing stat:  ep_magma_value_separation_size from stat group config
[2023-01-17T17:00:57.550Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7880 Test failed: `stats error" (missing stats)
[2023-01-17T17:00:57.550Z] (40 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/877/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1146/ : FAILURE

Compile error at [2023-01-17T16:27:22.308Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1146/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/848/ : FAILURE

Compile error at [2023-01-17T16:59:59.144Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/848/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/862/ : FAILURE

Compile error at [2023-01-17T16:30:11.135Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/862/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/876/ : FAILURE

Compile error at [2023-01-17T16:54:18.307Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/876/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/867/ : FAILURE

Compile error at [2023-01-17T17:03:20.593Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/867/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/869/ : FAILURE

Compile error at [2023-01-17T16:54:22.381Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/869/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22248/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
